# registry/api_docs/swagger.yaml
@@ -1,6 +1,8 @@
 definitions:
   http.CreateBlockRequest:
     properties:
+      catalog:
+        type: object
       docker_image:
         type: string
       documentation_url:
@@ -20,6 +22,8 @@ definitions:
     type: object
   http.CreateBlockResponse:
     properties:
+      catalog:
+        type: object
       created_at:
         type: string
       docker_image:
